6958465: Sparc aten build24.0: openjdk-7.ea-b96 failed Error: Formal argument ... requires an lvalue

Fix compilation errors.  Made non-const references const so can be assigned with lvalue.

Reviewed-by: phh, xlu